# AudioDiagnosisDev

./: CMakeLists.txt  LICENSE  build.sh  build_and_run.sh  readme.md
src/: main.c
